# apm-viewer

./: README.md
.github/workflows/: desktop.yml  web.yml
desktop/: .clang-format  CMakeLists.txt  MainWindow.cpp  MainWindow.ui  README.md  main.cpp
desktop/date/: date.cpp  date.hpp
desktop/model/: node.cpp  parser.cpp  parser.hpp  treemodel.hpp
desktop/resources/: apm.icns  winicon.rc
desktop/src/: main.cpp  mainwindow.cpp  mainwindow.hpp
desktop/src/logger/: logger.cpp  logger.hpp
desktop/src/model/: node.hpp  treemodel.cpp
desktop/src/view/: logviewer.cpp  logviewer.hpp  logviewer.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
web/: CMakeLists.txt  README.md
web/cmake/: FindHPDF.cmake
web/docker/: Dockerfile  build.sh  env.sh  run.sh
web/docker/scripts/: entrypoint.sh
web/resources/: wt_config.xml
web/resources/approot/templates/: auth.xml  list.xml  page.xml  tree.xml
web/resources/docroot/css/: style.css
web/src/: CMakeLists.txt  main.cpp
web/src/model/: node.cpp  node.hpp  propertiesmodel.cpp  propertiesmodel.hpp  tablemodel.cpp  tablemodel.hpp  treemodel.cpp  treemodel.hpp
web/src/tsdb/: pgtypes.cpp  pgtypes.hpp  pool.hpp  questdb.cpp  questdb.hpp
web/src/util/: date.cpp
web/src/view/: application.cpp  application.hpp  authwidget.cpp  authwidget.hpp  listview.cpp  listview.hpp  loginview.cpp  loginview.hpp  page.cpp  page.hpp  treeview.cpp  treeview.hpp
